# ForkDesktop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  main.cpp  qss.qrc  res.qrc
pages/: CMakeLists.txt  gamepage.cpp  gamepage.h  skinpage.cpp  skinpage.h
public/: CMakeLists.txt  publiccache.cpp  publiccache.h  stdinit.h
qss/: background.qss  centralwidget.qss  gamepage.qss  notification.qss  searchbox.qss  sidebar.qss  sidebaritem.qss  skinpage.qss  skinpageitem.qss
res/: 图标.psd
utils/: CMakeLists.txt  cachemanager.cpp  cachemanager.h  qssmanager.cpp  qssmanager.h
window/: CMakeLists.txt  background.cpp  background.h  centralwidget.cpp  centralwidget.h  foldwindow.cpp  foldwindow.h  notification.cpp  notification.h  searchbox.cpp  searchbox.h  sidebar.cpp  sidebar.h  skinpage.cpp  skinpage.h  themebutton.cpp  themebutton.h  trayicon.cpp  trayicon.h
